style: 💄 fix overflow issues

--- a/src/app/components/article/slide-light/article-slide-light.component.scss
+++ b/src/app/components/article/slide-light/article-slide-light.component.scss
@@ -1,7 +1,3 @@
 :host {
   @apply article block p-0;
 }
-
-section wps-author {
-  @apply static;
-}
